--- a/blocks/contact-us/contact-us.css
+++ b/blocks/contact-us/contact-us.css
@@ -3,6 +3,7 @@
   padding: 0;
   width: calc(100% - 320px);
   background-color: #102b26;
+  height: 448px;
   color: #ffffff;
   border-radius: 20px;
   position: relative;
