--- a/blocks/product-information/__menu-accent/product-information__menu-accent.css
+++ b/blocks/product-information/__menu-accent/product-information__menu-accent.css
@@ -1,3 +1,7 @@
 .product-information__menu-accent {
   text-decoration: underline;
+  transition: 0.2s;
+}
+.product-information__menu-accent:hover {
+  color: #ffa500;
 }
