--- a/blocks/contact-us/__btn/contact-us__btn.css
+++ b/blocks/contact-us/__btn/contact-us__btn.css
@@ -14,4 +14,8 @@
   font-size: 16px;
   line-height: 19px;
   box-shadow: 0px 4px 20px rgba(255, 255, 255, 0.25);
+  transition: 0.2s;
+}
+.contact-us__btn:hover {
+  box-shadow: 0px 4px 20px rgba(255, 255, 255, 0.4);
 }
