--- a/blocks/navigation/__menu-item/navigation__menu-item.css
+++ b/blocks/navigation/__menu-item/navigation__menu-item.css
@@ -8,4 +8,8 @@
   justify-content: center;
   align-items: center;
   gap: 5px;
+  transition: 0.2s;
+}
+.navigation__menu-item:hover {
+  color: #ffa500;
 }
