--- a/blocks/product-information/__btn/product-information__btn.css
+++ b/blocks/product-information/__btn/product-information__btn.css
@@ -14,4 +14,8 @@
   text-decoration: none;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
   border-radius: 100px;
+  transition: 0.2s;
+}
+.product-information__btn:hover {
+  opacity: 0.8;
 }
