--- a/blocks/product-information/__feature-view-all/product-information__feature-view-all.css
+++ b/blocks/product-information/__feature-view-all/product-information__feature-view-all.css
@@ -4,4 +4,9 @@
   font-size: 12.5px;
   line-height: 15px;
   font-weight: 400;
+  transition: 0.2s;
+  width: fit-content;
+}
+.product-information__feature-view-all:hover {
+  color: #ffa500;
 }
