--- a/blocks/product-information/__tab-opener/product-information__tab-opener.css
+++ b/blocks/product-information/__tab-opener/product-information__tab-opener.css
@@ -5,3 +5,8 @@
   color: #000000;
   text-decoration: none;
   padding: 0 0 15px;
+  transition: 0.2s;
+}
+.product-information__tab-opener:hover {
+  opacity: 0.8;
+}
