--- a/blocks/product-information/__thumbnail/product-information__thumbnail.css
+++ b/blocks/product-information/__thumbnail/product-information__thumbnail.css
@@ -1,7 +1,8 @@
 .product-information__thumbnail {
-  width: 80px;
-  height: 80px;
+  margin: 0;
+  padding: 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0);
 }
-.product-information__thumbnail:first-child {
-  border-bottom: 1px solid #000000;
+.product-information__thumbnail:hover {
+  border-bottom: 1px solid rgba(0, 0, 0, 1);
 }
