--- a/blocks/review/__write-btn/review__write-btn.css
+++ b/blocks/review/__write-btn/review__write-btn.css
@@ -13,4 +13,10 @@
   font-size: 17.5px;
   font-weight: 400;
   line-height: 21px;
+  transition: 0.2s;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+}
+.review__write-btn:hover {
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.5);
+  opacity: 0.9;
 }
