--- a/blocks/review/review.css
+++ b/blocks/review/review.css
@@ -8,4 +8,9 @@
   text-decoration: none;
   box-shadow: 0px 2px 4px rgba(7, 4, 146, 0.1), 0px 24px 60px rgba(6, 47, 125, 0.05),
     0px 12px 24px rgba(27, 59, 119, 0.05);
+  transition: 0.2s;
+}
+.review:hover {
+  box-shadow: 0px 2px 4px rgba(7, 4, 146, 0.3), 0px 24px 60px rgba(6, 47, 125, 0.1),
+    0px 12px 24px rgba(27, 59, 119, 0.1);
 }
