--- a/blocks/showcase/__item/showcase__item.css
+++ b/blocks/showcase/__item/showcase__item.css
@@ -8,4 +8,9 @@
   border-radius: 20px;
   background-color: #ffffff;
   box-shadow: 0px 2px 20px 5px rgba(0, 0, 0, 0.1);
+  text-decoration: none;
+  color: #000000;
+}
+.showcase__item:hover .showcase__buy-btn {
+  background-color: #ffa500;
 }
