--- a/blocks/footer/__payment/footer__payment.css
+++ b/blocks/footer/__payment/footer__payment.css
@@ -1,7 +1,7 @@
-.showcase__items {
+.footer__payment {
   display: flex;
   flex-direction: row;
-  margin: 0 0 48px;
+  margin: 0;
   padding: 0;
-  gap: 25px;
+  gap: 10px;
 }
