--- a/blocks/product-information/__instock-quantity/product-information__instock-quantity.css
+++ b/blocks/product-information/__instock-quantity/product-information__instock-quantity.css
@@ -1,7 +1,7 @@
 .product-information__instock-quantity {
   width: 12px;
   height: 12px;
-  background-color: #6fff00;
+  background-color: #138808;
   margin: 0;
   padding: 0;
   border-radius: 50%;
