--- a/blocks/reviews/__items/reviews__items.css
+++ b/blocks/reviews/__items/reviews__items.css
@@ -4,5 +4,6 @@
   gap: 24px;
   margin: 0 0 41px;
   padding: 0;
-  transform: translateX(160px);
+  transform: translateX(80px);
+  width: 3000px;
 }
