--- a/blocks/contact-us/contact-us.css
+++ b/blocks/contact-us/contact-us.css
@@ -9,3 +9,8 @@
   position: relative;
   z-index: 0;
 }
+@media screen and (max-width: 1280px) {
+  .contact-us {
+    width: calc(100% - 160px);
+  }
+}
