--- a/blocks/footer/__content/footer__content.css
+++ b/blocks/footer/__content/footer__content.css
@@ -1,6 +1,5 @@
-.extra-promo__card {
-  width: 100%;
-  margin: 0;
+.footer__content {
+  margin: 52px 0 0;
   padding: 0;
   display: flex;
   flex-direction: column;
