--- a/blocks/navigation/navigation.css
+++ b/blocks/navigation/navigation.css
@@ -7,3 +7,8 @@
   border-bottom: 2px solid #000000;
   width: calc(100% - 160px);
 }
+@media screen and (max-width: 1280px) {
+  .navigation {
+    width: calc(100% - 80px);
+  }
+}
