--- a/blocks/product-information/__main-thumbnail/product-information__main-thumbnail.css
+++ b/blocks/product-information/__main-thumbnail/product-information__main-thumbnail.css
@@ -1,7 +1,7 @@
 .product-information__main-thumbnail {
   margin: 0;
   padding: 0 0 20px;
-  width: 522px;
+  max-width: 522px;
   height: 540px;
   border-bottom: 1px solid #000000;
   background-size: cover;
