--- a/blocks/promo-marquee/promo-marquee.css
+++ b/blocks/promo-marquee/promo-marquee.css
@@ -2,11 +2,11 @@
   height: 60px;
   background-color: #000000;
   color: #ffffff;
-  display: grid;
+  display: flex;
   align-items: center;
-  grid-template-columns: repeat(6, 1fr);
   gap: 25px;
   margin: 0;
   padding: 0;
-  max-width: 100%;
+  width: 3500px;
+  transform: translateX(-22px);
 }
