Добавил поддержку меньших дисплеев, обновил футер

--- a/blocks/contact-us/__img/contact-us__img.css
+++ b/blocks/contact-us/__img/contact-us__img.css
@@ -4,5 +4,10 @@
   top: -135px;
   right: 10px;
   width: 473px;
-  height: 583px;
+}
+@media screen and (max-width: 1185px) {
+  .contact-us__img {
+    width: 378px;
+    top: -20px;
+  }
 }
