--- a/blocks/contact-us/contact-us.css
+++ b/blocks/contact-us/contact-us.css
@@ -9,8 +9,29 @@
   position: relative;
   z-index: 0;
 }
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1470px) {
+  .contact-us {
+    width: calc(100% - 250px);
+  }
+}
+@media screen and (max-width: 1380px) {
   .contact-us {
     width: calc(100% - 160px);
+  }
+}
+@media screen and (max-width: 1280px) {
+  .contact-us {
+    width: calc(100% - 80px);
+  }
+}
+@media screen and (max-width: 1185px) {
+  .contact-us {
+    margin: 135px auto 60px;
+  }
+}
+@media screen and (max-width: 1075px) {
+  .contact-us {
+    width: 100%;
+    border-radius: 0;
   }
 }
