--- a/blocks/footer/__newsletter/footer__newsletter.css
+++ b/blocks/footer/__newsletter/footer__newsletter.css
@@ -10,3 +10,8 @@
   margin: 0;
   padding: 0 20px 0 0;
 }
+@media screen and (max-width: 1180px) {
+  .footer__newsletter {
+    width: 340px;
+  }
+}
