--- a/blocks/extra-promo/extra-promo.css
+++ b/blocks/extra-promo/extra-promo.css
@@ -7,3 +7,8 @@
   padding: 0;
   gap: 17px;
 }
+@media screen and (max-width: 1110px) {
+  .extra-promo {
+    max-width: calc(100% - 80px);
+  }
+}
