--- a/blocks/footer/__columns/footer__columns.css
+++ b/blocks/footer/__columns/footer__columns.css
@@ -3,5 +3,22 @@
   margin: 66px 0 0;
   padding: 0;
   display: flex;
+  flex-direction: row;
   gap: 105px;
+}
+@media screen and (max-width: 1300px) {
+  .footer__columns {
+    gap: 70px;
+  }
+}
+@media screen and (max-width: 1100px) {
+  .footer__columns {
+    gap: 50px;
+  }
+}
+@media screen and (max-width: 1060px) {
+  .footer__columns {
+    gap: 0;
+    justify-content: space-between;
+  }
 }
