--- a/blocks/footer/__copyright-and-payment/footer__copyright-and-payment.css
+++ b/blocks/footer/__copyright-and-payment/footer__copyright-and-payment.css
@@ -1,7 +1,17 @@
 .footer__copyright-and-payment {
-  margin: 0;
+  margin: 65px 0 0;
   padding: 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+@media screen and (max-width: 1250px) {
+  .footer__copyright-and-payment {
+    margin: 40px 0 0;
+  }
+}
+@media screen and (max-width: 1060px) {
+  .footer__copyright-and-payment {
+    margin: 80px 0 0;
+  }
 }
