--- a/blocks/footer/__payment-icon/footer__payment-icon.css
+++ b/blocks/footer/__payment-icon/footer__payment-icon.css
@@ -4,3 +4,8 @@
   width: 38px;
   height: 24px;
 }
+@media screen and (max-width: 1060px) {
+  .footer__payment-icon {
+    font-size: 18px;
+  }
+}
