--- a/blocks/footer/__social-icon/footer__social-icon.css
+++ b/blocks/footer/__social-icon/footer__social-icon.css
@@ -2,7 +2,13 @@
   padding: 0;
   margin: 0;
   transition: 0.2s;
+  width: 27px;
 }
 .footer__social-icon:hover {
   opacity: 0.6;
+}
+@media screen and (max-width: 1060px) {
+  .footer__social-icon {
+    width: 34px;
+  }
 }
