--- a/blocks/product-information/__btn/product-information__btn.css
+++ b/blocks/product-information/__btn/product-information__btn.css
@@ -1,7 +1,6 @@
 .product-information__btn {
   width: 200px;
   height: 41px;
-  outline: 1px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,6 +14,7 @@
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
   border-radius: 100px;
   transition: 0.2s;
+  border: 1px solid #000000;
 }
 .product-information__btn:hover {
   opacity: 0.8;
