--- a/blocks/reviews/__items/reviews__items.css
+++ b/blocks/reviews/__items/reviews__items.css
@@ -7,3 +7,8 @@
   transform: translateX(80px);
   width: 3000px;
 }
+@media screen and (max-width: 1110px) {
+  .reviews__items {
+    transform: translateX(40px);
+  }
+}
