--- a/blocks/showcase/showcase.css
+++ b/blocks/showcase/showcase.css
@@ -3,3 +3,8 @@
   padding: 0;
   transform: translateX(80px);
 }
+@media screen and (max-width: 1075px) {
+  .showcase {
+    transform: translateX(40px);
+  }
+}
