--- a/blocks/contact-us/__btn-and-answer/contact-us__btn-and-answer.css
+++ b/blocks/contact-us/__btn-and-answer/contact-us__btn-and-answer.css
@@ -5,3 +5,8 @@
   align-items: center;
   gap: 12px;
 }
+@media screen and (max-width: 970px) {
+  .contact-us__btn-and-answer {
+    margin: 0 0 0 40px;
+  }
+}
