--- a/blocks/contact-us/__faces/contact-us__faces.css
+++ b/blocks/contact-us/__faces/contact-us__faces.css
@@ -3,3 +3,8 @@
   padding: 0;
   display: flex;
 }
+@media screen and (max-width: 970px) {
+  .contact-us__faces {
+    margin: 0 0 33px 40px;
+  }
+}
