--- a/blocks/included/included.css
+++ b/blocks/included/included.css
@@ -1,7 +1,23 @@
 .included {
   margin: 0 auto 75px;
   padding: 0;
-  width: calc(100% - 515px);
+  max-width: calc(100% - 515px);
+  width: 100%;
   display: flex;
   flex-direction: column;
+}
+@media screen and (max-width: 1800px) {
+  .included {
+    max-width: calc(100% - 250px);
+  }
+}
+@media screen and (max-width: 1000px) {
+  .included {
+    max-width: calc(100% - 125px);
+  }
+}
+@media screen and (max-width: 765px) {
+  .included {
+    max-width: calc(100% - 50px);
+  }
 }
