--- a/blocks/product-information/__instock/product-information__instock.css
+++ b/blocks/product-information/__instock/product-information__instock.css
@@ -5,3 +5,8 @@
   align-items: center;
   gap: 10px;
 }
+@media screen and (max-width: 950px) {
+  .product-information__instock {
+    margin: 10px 0 15px 5px;
+  }
+}
