--- a/blocks/product-information/__thumbnail-image/product-information__thumbnail-image.css
+++ b/blocks/product-information/__thumbnail-image/product-information__thumbnail-image.css
@@ -1,4 +1,13 @@
 .product-information__thumbnail-image {
-  width: 80px;
-  height: 80px;
+  max-width: 80px;
+}
+@media screen and (max-width: 1000px) {
+  .product-information__thumbnail-image {
+    max-width: 60px;
+  }
+}
+@media screen and (max-width: 950px) {
+  .product-information__thumbnail-image {
+    max-width: 50px;
+  }
 }
