--- a/blocks/contact-us/__title/contact-us__title.css
+++ b/blocks/contact-us/__title/contact-us__title.css
@@ -8,3 +8,11 @@
   max-width: 540px;
   width: 100%;
 }
+@media screen and (max-width: 970px) {
+  .contact-us__title {
+    padding: 40px 0 0 0;
+    margin: 0 0 25px 40px;
+    max-width: 440px;
+    width: 100%;
+  }
+}
