--- a/blocks/contact-us/contact-us.css
+++ b/blocks/contact-us/contact-us.css
@@ -35,3 +35,11 @@
     border-radius: 0;
   }
 }
+@media screen and (max-width: 970px) {
+  .contact-us {
+    width: 100%;
+    border-radius: 0;
+    display: flex;
+    justify-content: space-between;
+  }
+}
