--- a/blocks/extra-promo/__card/extra-promo__card.css
+++ b/blocks/extra-promo/__card/extra-promo__card.css
@@ -6,3 +6,9 @@
   flex-direction: column;
   gap: 20px;
 }
+@media screen and (max-width: 850px) {
+  .extra-promo__card {
+    flex-direction: row;
+    border-radius: 20px;
+  }
+}
