--- a/blocks/extra-promo/__paragraph/extra-promo__paragraph.css
+++ b/blocks/extra-promo/__paragraph/extra-promo__paragraph.css
@@ -5,3 +5,9 @@
   line-height: 21px;
   font-weight: 400;
 }
+@media screen and (max-width: 850px) {
+  .extra-promo__paragraph {
+    font-size: 22px;
+    margin: 0 auto;
+  }
+}
