--- a/blocks/extra-promo/extra-promo.css
+++ b/blocks/extra-promo/extra-promo.css
@@ -12,3 +12,10 @@
     max-width: calc(100% - 80px);
   }
 }
+@media screen and (max-width: 850px) {
+  .extra-promo {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    gap: 40px;
+  }
+}
