--- a/blocks/footer/__copyright-and-payment/footer__copyright-and-payment.css
+++ b/blocks/footer/__copyright-and-payment/footer__copyright-and-payment.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 @media screen and (max-width: 1250px) {
   .footer__copyright-and-payment {
