--- a/blocks/footer/__email-eclipse/footer__email-eclipse.css
+++ b/blocks/footer/__email-eclipse/footer__email-eclipse.css
@@ -14,3 +14,9 @@
 .footer__email-eclipse:hover {
   opacity: 0.7;
 }
+@media screen and (max-width: 850px) {
+  .footer__email-eclipse {
+    width: 32px;
+    height: 32px;
+  }
+}
