--- a/blocks/footer/__email/footer__email.css
+++ b/blocks/footer/__email/footer__email.css
@@ -12,3 +12,9 @@
   outline-offset: 0;
   border: 0;
 }
+@media screen and (max-width: 850px) {
+  .footer__email {
+    font-size: 32px;
+    opacity: 0.7;
+  }
+}
