--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,3 +6,8 @@
   flex-direction: column;
   justify-content: space-between;
 }
+@media screen and (max-width: 850px) {
+  .footer {
+    padding: 0 40px 26px 40px;
+  }
+}
