--- a/blocks/included/__items/included__items.css
+++ b/blocks/included/__items/included__items.css
@@ -1,6 +1,9 @@
 .included__items {
   display: flex;
   flex-direction: row;
-  gap: 150px;
-  justify-content: center;
+  justify-content: space-between;
+  max-width: 925px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0;
 }
