--- a/blocks/navigation/navigation.css
+++ b/blocks/navigation/navigation.css
@@ -12,3 +12,8 @@
     width: calc(100% - 80px);
   }
 }
+@media screen and (max-width: 895px) {
+  .navigation {
+    width: calc(100% - 40px);
+  }
+}
