--- a/blocks/product-information/__main-thumbnail/product-information__main-thumbnail.css
+++ b/blocks/product-information/__main-thumbnail/product-information__main-thumbnail.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0 0 20px;
   max-width: 522px;
-  height: 540px;
-  border-bottom: 1px solid #000000;
+  min-width: 250px;
+  width: 100%;
   background-size: cover;
 }
