--- a/blocks/product-information/product-information.css
+++ b/blocks/product-information/product-information.css
@@ -5,10 +5,14 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
-@media screen and (max-width: 1180px) {
+@media screen and (max-width: 1280px) {
   .product-information {
     max-width: calc(100% - 80px);
-    width: 100%;
-    grid-template-columns: 1fr minmax(300px, 630px);
+    grid-template-columns: repeat(2, 50%);
+  }
+}
+@media screen and (max-width: 950px) {
+  .product-information {
+    max-width: calc(100% - 40px);
   }
 }
