--- a/blocks/promo/__copy/promo__copy.css
+++ b/blocks/promo/__copy/promo__copy.css
@@ -23,3 +23,15 @@
     padding: 50px 0 0;
   }
 }
+@media screen and (max-width: 1180px) {
+  .promo__copy {
+    padding: 30px 0 0;
+  }
+}
+@media screen and (max-width: 895px) {
+  .promo__copy {
+    justify-content: center;
+    padding: 0;
+    order: 1;
+  }
+}
