--- a/blocks/promo/__paraghraph/promo__paraghraph.css
+++ b/blocks/promo/__paraghraph/promo__paraghraph.css
@@ -12,3 +12,23 @@
     max-width: 460px;
   }
 }
+@media screen and (max-width: 1024px) {
+  .promo__paraghraph {
+    font-size: 20px;
+    max-width: 460px;
+    line-height: 24px;
+  }
+}
+@media screen and (max-width: 895px) {
+  .promo__paraghraph {
+    font-size: 30px;
+    max-width: calc(100% - 40px);
+    line-height: 38px;
+    text-indent: 10px;
+  }
+}
+@media screen and (max-width: 775px) {
+  .promo__paraghraph {
+    font-size: 28px;
+  }
+}
