--- a/blocks/promo/__title/promo__title.css
+++ b/blocks/promo/__title/promo__title.css
@@ -11,3 +11,9 @@
     font-size: 30px;
   }
 }
+@media screen and (max-width: 895px) {
+  .promo__title {
+    font-size: 42px;
+    max-width: calc(100% - 40px);
+  }
+}
