--- a/blocks/promo/promo.css
+++ b/blocks/promo/promo.css
@@ -20,3 +20,11 @@
     border-radius: 0;
   }
 }
+@media screen and (max-width: 895px) {
+  .promo {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    border-radius: 20px;
+    width: calc(100% - 80px);
+  }
+}
