--- a/blocks/contact-us/__faces/contact-us__faces.css
+++ b/blocks/contact-us/__faces/contact-us__faces.css
@@ -8,3 +8,8 @@
     margin: 0 0 33px 40px;
   }
 }
+@media screen and (max-width: 600px) {
+  .contact-us__faces {
+    margin: 0 0 33px 20px;
+  }
+}
