--- a/blocks/contact-us/contact-us.css
+++ b/blocks/contact-us/contact-us.css
@@ -43,3 +43,14 @@
     justify-content: space-between;
   }
 }
+@media screen and (max-width: 720px) {
+  .contact-us {
+    height: 350px;
+    margin: 70px auto 30px;
+  }
+}
+@media screen and (max-width: 530px) {
+  .contact-us {
+    height: 400px;
+  }
+}
