--- a/blocks/product-information/__images/product-information__images.css
+++ b/blocks/product-information/__images/product-information__images.css
@@ -5,3 +5,8 @@
   margin: 0;
   padding: 0;
 }
+@media screen and (max-width: 750px) {
+  .product-information__images {
+    justify-content: center;
+  }
+}
