--- a/blocks/contact-us/__btn-and-answer/contact-us__btn-and-answer.css
+++ b/blocks/contact-us/__btn-and-answer/contact-us__btn-and-answer.css
@@ -10,3 +10,8 @@
     margin: 0 0 0 40px;
   }
 }
+@media screen and (max-width: 600px) {
+  .contact-us__btn-and-answer {
+    margin: 0 0 0 20px;
+  }
+}
