--- a/blocks/contact-us/__title/contact-us__title.css
+++ b/blocks/contact-us/__title/contact-us__title.css
@@ -16,3 +16,20 @@
     width: 100%;
   }
 }
+@media screen and (max-width: 720px) {
+  .contact-us__title {
+    max-width: 100%;
+  }
+}
+@media screen and (max-width: 600px) {
+  .contact-us__title {
+    max-width: 100%;
+    margin: 0 0 25px 20px;
+  }
+}
+@media screen and (max-width: 570px) {
+  .contact-us__title {
+    max-width: calc(100% - 20px);
+    margin: 0 0 25px 20px;
+  }
+}
