--- a/blocks/footer/__columns/footer__columns.css
+++ b/blocks/footer/__columns/footer__columns.css
@@ -22,3 +22,9 @@
     justify-content: space-between;
   }
 }
+@media screen and (max-width: 730px) {
+  .footer__columns {
+    flex-direction: column;
+    gap: 70px;
+  }
+}
