--- a/blocks/footer/__copyright-and-payment/footer__copyright-and-payment.css
+++ b/blocks/footer/__copyright-and-payment/footer__copyright-and-payment.css
@@ -16,3 +16,9 @@
     margin: 80px 0 0;
   }
 }
+@media screen and (max-width: 700px) {
+  .footer__copyright-and-payment {
+    flex-direction: column;
+    gap: 10px;
+  }
+}
