--- a/blocks/included/__items/included__items.css
+++ b/blocks/included/__items/included__items.css
@@ -7,3 +7,11 @@
   margin: 0 auto;
   padding: 0;
 }
+@media screen and (max-width: 550px) {
+  .included__items {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 30px;
+  }
+}
