--- a/blocks/navigation/__logo/navigation__logo.css
+++ b/blocks/navigation/__logo/navigation__logo.css
@@ -11,3 +11,14 @@
   justify-content: center;
   align-items: center;
 }
+@media screen and (max-width: 650px) {
+  .navigation__logo {
+    justify-content: flex-start;
+  }
+}
+@media screen and (max-width: 540px) {
+  .navigation__logo {
+    margin: auto 0;
+    justify-content: center;
+  }
+}
