--- a/blocks/product-information/__thumbnail-image/product-information__thumbnail-image.css
+++ b/blocks/product-information/__thumbnail-image/product-information__thumbnail-image.css
@@ -11,3 +11,13 @@
     max-width: 50px;
   }
 }
+@media screen and (max-width: 750px) {
+  .product-information__thumbnail-image {
+    max-width: 80px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .product-information__thumbnail-image {
+    max-width: 70px;
+  }
+}
