--- a/blocks/product-information/product-information.css
+++ b/blocks/product-information/product-information.css
@@ -4,6 +4,7 @@
   margin: 0 auto 57px;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  padding: 0;
 }
 @media screen and (max-width: 1280px) {
   .product-information {
@@ -14,5 +15,12 @@
 @media screen and (max-width: 950px) {
   .product-information {
     max-width: calc(100% - 40px);
+  }
+}
+@media screen and (max-width: 750px) {
+  .product-information {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
