--- a/blocks/promo/__paraghraph/promo__paraghraph.css
+++ b/blocks/promo/__paraghraph/promo__paraghraph.css
@@ -29,6 +29,16 @@
 }
 @media screen and (max-width: 775px) {
   .promo__paraghraph {
-    font-size: 28px;
+    font-size: 24px;
+  }
+}
+@media screen and (max-width: 547px) {
+  .promo__paraghraph {
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 490px) {
+  .promo__paraghraph {
+    max-width: calc(100% - 10px);
   }
 }
